[package]
name = "keyboard_melee"
version = "0.1.0"
authors = ["Corey Lehman <coreylehman@me.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
keyboard_melee_controller = { path = "src/keyboard_melee_controller", version = "0.1" }
tokio = { version = "0.2", features = ["time", "macros"] }
