[package]
name = "keyboard_input"
version = "0.1.0"
authors = ["Corey Lehman <coreylehman@me.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "keyboard_input"
path = "src/lib.rs"

[dependencies]
lazy_static = "1.4"
winapi = { version = "0.3.9", features = ["winuser", "libloaderapi"] }
serde = { version = "1.0", features = ["derive"] }
