[package]
name = "keyboard_melee_controller"
version = "0.1.0"
authors = ["Corey Lehman <coreylehman@me.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "keyboard_melee_controller"
path = "src/lib.rs"

[dependencies]
keyboard_input = { path = "../keyboard_input", version = "0.1" }
vjoy_device = { path = "../vjoy_device", version = "0.1" }
digital_melee_controller = { path = "../digital_melee_controller", version = "0.1" }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
